[package]
name = "projectmanagerbackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "runtime-tokio-rustls"] }
anyhow = "1.0.102"
